Store the locale config in ResourcesImpl instead of ResourcesManager
Fixes: 404553215
Test: automated
Flag: EXEMPT bugfix
Change-Id: Idb7bfb89775484aba7d45210aea6f93a84b23420

--- a/core/tests/coretests/AndroidManifest.xml
+++ b/core/tests/coretests/AndroidManifest.xml
@@ -177,7 +177,8 @@
     <application
         android:theme="@style/Theme"
         android:supportsRtl="true"
-        android:enableOnBackInvokedCallback="true">
+        android:enableOnBackInvokedCallback="true"
+        android:localeConfig="@xml/locales_config">
         <uses-library android:name="android.test.runner" />
         <uses-library android:name="org.apache.http.legacy" android:required="false" />
         <meta-data
